--- a/aviasels/index.html
+++ b/aviasels/index.html
@@ -6,13 +6,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
 	<title>Ависалес</title>
-	<base href="/">
-	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 	<link rel="stylesheet" href="style.css">
-	<link rel="stylesheet" href="jquery.datetimepicker.min.css">
-	<script src="jquery.js">
-	</script>
-	<script src="jquery.datetimepicker.full.min.js"></script>
 </head>
 
 <body>
@@ -42,12 +36,7 @@
 
 					<div class="input input__cities-from">
 						<label>Отправление
-							<input id="datetime" class="input__date-depart" required>
-							<script>
-								$("#datetime").datetimepicker({
-									step: 5
-								});
-							</script>
+							<input type="date" class="input__date-depart" required>
 						</label>
 					</div>
 				</div>
@@ -74,12 +63,8 @@
 
 
 	</main>
-	<script src="script.js">
-	</script>
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-	<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-	 <script src="bootstrap-3.4.1-dist/js/bootstrap.js"> 
-	 </script>
+		<script src="script.js">
+		</script>
 </body>
 
 </html>
