--- a/aviasels/index.html
+++ b/aviasels/index.html
@@ -7,9 +7,25 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Ависалес</title>
 	<link rel="stylesheet" href="style.css">
+	<script src="js/jquery-3.5.1.min.js"></script>
+	<script src="js/bootstrap.min.js"></script>
+
+	<link rel="stylesheet" href="css/bootstrap-datepicker.css">
+	<script src="js/bootstrap-datepicker.js"></script>
 	<link rel="stylesheet" href="css/bootstrap.css">
-	<link rel="stylesheet" href="jquery.datetimepicker.min.css">
+	
+	<script type="text/javascript">
+		$(function(){
+		  $(".input__date-depart").datepicker({
+			  'format' : 'yyyy-mm-dd',
+			  'autoclose' : true
+		  });
+		});
+	  </script>
+
 </head>
+
+
 
 <body>
 	<h1>Авиасалес</h1>
@@ -38,8 +54,8 @@
 
 					<div class="input input__cities-from">
 						<label>Отправление
-							<input type="date" class="input__date-depart" required>
-							
+							<input type="text" autocomplete="off" id="datepicker" placeholder="yyyy-mm-dd" class="input__date-depart" required>
+						
 						</label>
 					</div>
 				</div>
@@ -65,11 +81,11 @@
 
 
 	</main>
+	
 		<script src="script.js">
 		</script>
-		<script src="js/jquery-3.5.1.min.js"></script>
-		<script src="jquery.datetimepicker.full.js"></script>
-		<script src="js/bootstrap.min.js"></script>
+		
+		
 </body>
 
 </html>
